get current user info & add links for prs

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,10 @@
     "moduleResolution": "node"
   },
   "exclude": [
-    "node_modules",
-    "typings"
+    "node_modules"
+  ],
+  "filesGlob": [
+    "src/**/*.ts",
+    "typings/index.d.ts"
   ]
 }
