--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "@angular/router": "3.0.0-rc.1",
     "@angular/router-deprecated": "2.0.0-rc.2",
     "@angular/upgrade": "2.0.0-rc.5",
-    "bootstrap": "^3.3.6",
+    "bootstrap": "^3.3.7",
+    "font-awesome": "^4.6.3",
     "reflect-metadata": "^0.1.3",
     "rxjs": "5.0.0-beta.6",
     "systemjs": "0.19.36",
