--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bootstrap": "^3.3.7",
     "commonjs": "0.0.1",
     "core-js": "^2.4.1",
+    "es6-shim": "^0.35.1",
     "font-awesome": "^4.6.3",
     "reflect-metadata": "^0.1.3",
     "rxjs": "5.0.0-beta.6",
