remove no longer used electron files

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "gulp build",
     "watch": "gulp watch",
-    "start": "electron build/",
+    "start": "gulp serve",
     "typings": "typings"
   },
   "author": "Ryan Stedman",
@@ -21,8 +21,6 @@
     "@angular/router-deprecated": "2.0.0-rc.2",
     "@angular/upgrade": "2.0.0-rc.5",
     "bootstrap": "^3.3.7",
-    "commonjs": "0.0.1",
-    "core-js": "^2.4.1",
     "es6-shim": "^0.35.1",
     "font-awesome": "^4.6.3",
     "reflect-metadata": "^0.1.3",
@@ -32,14 +30,11 @@
   },
   "devDependencies": {
     "del": "^2.2.1",
-    "electron-prebuilt": "^1.2.0",
     "gulp": "^3.9.1",
     "gulp-connect": "^5.0.0",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-typescript": "^2.13.6",
     "run-sequence": "^1.2.2",
-    "systemjs-builder": "^0.15.26",
-    "ts-loader": "^0.8.2",
     "typescript": "1.8.7",
     "typings": "^0.8.1"
   }
