work around typescript bug

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,8 +5,7 @@
     "experimentalDecorators": true,
     "sourceMap": true,
     "noImplicitAny": false,
-    "module": "commonjs",
-    "moduleResolution": "node"
+    "module": "commonjs"
   },
   "exclude": [
     "node_modules"
