--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "gulp-sourcemaps": "^1.6.0",
     "gulp-typescript": "^2.13.6",
     "run-sequence": "^1.2.2",
-    "typescript": "1.8.7",
+    "typescript": "^1.8.10",
     "typings": "^0.8.1"
   }
 }
