--- a/package.json
+++ b/package.json
@@ -10,23 +10,26 @@
   },
   "author": "Ryan Stedman",
   "dependencies": {
-    "@angular/common": "2.0.0-rc.5",
-    "@angular/compiler": "2.0.0-rc.5",
-    "@angular/core": "2.0.0-rc.5",
-    "@angular/forms": "0.3.0",
-    "@angular/http": "2.0.0-rc.5",
-    "@angular/platform-browser": "2.0.0-rc.5",
-    "@angular/platform-browser-dynamic": "2.0.0-rc.5",
-    "@angular/router": "3.0.0-rc.1",
+    "@angular/common": "2.0.0-rc.6",
+    "@angular/compiler": "2.0.0-rc.6",
+    "@angular/core": "2.0.0-rc.6",
+    "@angular/forms": "2.0.0-rc.6",
+    "@angular/http": "2.0.0-rc.6",
+    "@angular/platform-browser": "2.0.0-rc.6",
+    "@angular/platform-browser-dynamic": "2.0.0-rc.6",
+    "@angular/router": "3.0.0-rc.2",
     "@angular/router-deprecated": "2.0.0-rc.2",
-    "@angular/upgrade": "2.0.0-rc.5",
+    "@angular/upgrade": "2.0.0-rc.6",
+
+    "rxjs": "5.0.0-beta.11",
+    "zone.js": "0.6.17",
+
+    "angular-2-dropdown-multiselect": "^0.2.0",
     "bootstrap": "^3.3.7",
     "es6-shim": "^0.35.1",
     "font-awesome": "^4.6.3",
     "reflect-metadata": "^0.1.3",
-    "rxjs": "5.0.0-beta.6",
-    "systemjs": "0.19.36",
-    "zone.js": "^0.6.12"
+    "systemjs": "0.19.36"
   },
   "devDependencies": {
     "del": "^2.2.1",
