--- a/package.json
+++ b/package.json
@@ -20,16 +20,14 @@
     "@angular/router": "3.0.0-rc.2",
     "@angular/router-deprecated": "2.0.0-rc.2",
     "@angular/upgrade": "2.0.0-rc.6",
-
-    "rxjs": "5.0.0-beta.11",
-    "zone.js": "0.6.17",
-
     "angular-2-dropdown-multiselect": "^0.2.0",
     "bootstrap": "^3.3.7",
     "es6-shim": "^0.35.1",
     "font-awesome": "^4.6.3",
     "reflect-metadata": "^0.1.3",
-    "systemjs": "0.19.36"
+    "rxjs": "5.0.0-beta.11",
+    "systemjs": "0.19.36",
+    "zone.js": "0.6.17"
   },
   "devDependencies": {
     "del": "^2.2.1",
@@ -38,6 +36,7 @@
     "gulp-sourcemaps": "^1.6.0",
     "gulp-typescript": "^2.13.6",
     "run-sequence": "^1.2.2",
+    "systemjs-builder": "^0.15.31",
     "typescript": "^1.8.10",
     "typings": "^0.8.1"
   }
