--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "plugin-typescript": "^5.1.2",
     "run-sequence": "^1.2.2",
     "systemjs-builder": "^0.15.31",
+    "tfx-cli": "^0.3.30",
     "typescript": "^1.8.10",
     "typings": "^0.8.1"
   }
