--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "reflect-metadata": "^0.1.3",
     "rxjs": "5.0.0-beta.11",
     "systemjs": "0.19.36",
+    "vss-web-extension-sdk": "^1.105.0",
     "zone.js": "0.6.17"
   },
   "devDependencies": {
