--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,7 +1,7 @@
 {
     "manifestVersion": 1,
     "id": "tfs-pullrequest-dashboard",
-    "version": "0.1.18",
+    "version": "0.1.19",
     "name": "TFS PullRequest Dashboard",
     "description": "A pull request dashboard for tfs.",
     "publisher": "ryanstedman",
@@ -31,10 +31,61 @@
             "path": "index.html", "addressable": true
         },
         {
-            "path": "app", "addressable": true
+            "path": "app/app.bundle.min.js", "addressable": true
         },
         {
-            "path": "vendor", "addressable": true
+            "path": "app/app.bundle.min.js.map", "addressable": true, "contentType": "application/json"
+        },
+        {
+            "path": "app/app.component.html", "addressable": true
+        },
+        {
+            "path": "app/pullRequest.component.html", "addressable": true
+        },
+        {
+            "path": "vendor/vendor.bundle.min.js", "addressable": true
+        },
+        {
+            "path": "vendor/vendor.bundle.min.js.map", "addressable": true, "contentType": "application/json"
+        },
+        {
+            "path": "vendor/bootstrap/css", "addressable": true
+        },
+        {
+            "path": "vendor/bootstrap/fonts/glyphicons-halflings-regular.eot", "addressable": true, "contentType": "application/vnd.ms-fontobject"
+        },
+        {
+            "path": "vendor/bootstrap/fonts/glyphicons-halflings-regular.svg", "addressable": true
+        },
+        {
+            "path": "vendor/bootstrap/fonts/glyphicons-halflings-regular.ttf", "addressable": true, "contentType": "application/font-sfnt"
+        },
+        {
+            "path": "vendor/bootstrap/fonts/glyphicons-halflings-regular.woff", "addressable": true, "contentType": "application/font-woff"
+        },
+        {
+            "path": "vendor/bootstrap/fonts/glyphicons-halflings-regular.woff2", "addressable": true, "contentType": "application/font-woff2"
+        },
+        {
+            "path": "vendor/font-awesome/css", "addressable": true
+        },
+        {
+            "path": "vendor/font-awesome/fonts/FontAwesome.otf", "addressable": true, "contentType": "application/x-font-opentype"
+        },
+        {
+            "path": "vendor/font-awesome/fonts/fontawesome-webfont.eot", "addressable": true, "contentType": "application/vnd.ms-fontobject"
+        },
+        {
+            "path": "vendor/font-awesome/fonts/fontawesome-webfont.svg", "addressable": true
+        },
+        {
+            "path": "vendor/font-awesome/fonts/fontawesome-webfont.ttf", "addressable": true, "contentType": "application/font-sfnt"
+        },
+        {
+            "path": "vendor/font-awesome/fonts/fontawesome-webfont.woff", "addressable": true, "contentType": "application/font-woff"
+        },
+        {
+            "path": "vendor/font-awesome/fonts/fontawesome-webfont.woff2", "addressable": true, "contentType": "application/font-woff2"
         },
         {
             "path": "assets", "addressable": true
