add support for querying identities through the extension apis

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,7 +1,7 @@
 {
     "manifestVersion": 1,
     "id": "tfs-pullrequest-dashboard",
-    "version": "0.2.6",
+    "version": "0.2.9",
     "name": "TFS PullRequest Dashboard",
     "description": "A pull request dashboard for tfs.",
     "publisher": "ryanstedman",
@@ -25,7 +25,7 @@
             }
         }
     ],
-    "scopes": ["vso.code"],
+    "scopes": ["vso.code", "vso.identity"],
     "files": [
         {
             "path": "index.html", "addressable": true
