add a basic overview for the extension

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,12 +1,15 @@
 {
     "manifestVersion": 1,
     "id": "tfs-pullrequest-dashboard",
-    "version": "0.2.33",
+    "version": "0.2.36",
     "name": "TFS PullRequest Dashboard",
     "description": "A pull request dashboard for tfs.",
     "publisher": "ryanstedman",
     "links": {
         "home":{"uri": "https://github.com/rstedman/tfs-pullrequest-dashboard"}
+    },
+    "content": {
+        "details":{ "path": "overview.md" }
     },
     "tags": ["pull request", "git"],
     "targets": [{ "id": "Microsoft.VisualStudio.Services" }],
