--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "run-sequence": "^1.2.2",
     "systemjs-builder": "^0.15.33",
     "tfx-cli": "^0.3.30",
-    "typescript": "^2.0.6",
+    "typescript": "^2.1.0-dev.20161030",
     "typings": "^0.8.1"
   }
 }
