update dependency versionsto be compatible with node 7

--- a/package.json
+++ b/package.json
@@ -10,23 +10,22 @@
   },
   "author": "Ryan Stedman",
   "dependencies": {
-    "@angular/common": "2.0.0-rc.6",
-    "@angular/compiler": "2.0.0-rc.6",
-    "@angular/core": "2.0.0-rc.6",
-    "@angular/forms": "2.0.0-rc.6",
-    "@angular/http": "2.0.0-rc.6",
-    "@angular/platform-browser": "2.0.0-rc.6",
-    "@angular/platform-browser-dynamic": "2.0.0-rc.6",
-    "@angular/router": "3.0.0-rc.2",
-    "@angular/router-deprecated": "2.0.0-rc.2",
-    "@angular/upgrade": "2.0.0-rc.6",
-    "angular-2-dropdown-multiselect": "^0.2.3",
+    "@angular/common": "~2.1.1",
+    "@angular/compiler": "~2.1.1",
+    "@angular/core": "~2.1.1",
+    "@angular/forms": "~2.1.1",
+    "@angular/http": "~2.1.1",
+    "@angular/platform-browser": "~2.1.1",
+    "@angular/platform-browser-dynamic": "~2.1.1",
+    "@angular/router": "~3.1.1",
+    "@angular/upgrade": "~2.1.1",
+    "angular-2-dropdown-multiselect": "^0.3.0",
     "es6-shim": "^0.35.1",
     "reflect-metadata": "^0.1.3",
-    "rxjs": "5.0.0-beta.11",
-    "systemjs": "0.19.36",
+    "rxjs": "5.0.0-beta.12",
+    "systemjs": "0.19.40",
     "vss-web-extension-sdk": "^1.106.0",
-    "zone.js": "0.6.17"
+    "zone.js": "^0.6.26"
   },
   "devDependencies": {
     "del": "^2.2.1",
@@ -34,16 +33,16 @@
     "gulp-angular2-embed-templates": "^2.2.1",
     "gulp-concat": "^2.6.0",
     "gulp-connect": "^5.0.0",
+    "gulp-live-server": "0.0.30",
     "gulp-rename": "^1.2.2",
     "gulp-run": "^1.7.1",
-    "gulp-sourcemaps": "^1.6.0",
-    "gulp-typescript": "^2.13.6",
+    "gulp-sourcemaps": "^2.2.0",
     "gulp-uglify": "^2.0.0",
     "plugin-typescript": "^5.2.7",
     "run-sequence": "^1.2.2",
     "systemjs-builder": "^0.15.33",
-    "tfx-cli": "^0.3.30",
+    "tfx-cli": "^0.3.38",
     "typescript": "^2.1.0-dev.20161030",
-    "typings": "^0.8.1"
+    "typings": "^1.5.0"
   }
 }
