--- a/package.json
+++ b/package.json
@@ -2,6 +2,12 @@
   "name": "tfs-pullrequest-dashboard",
   "verson": "0.1.0",
   "description": "A dashboard for tfs pull requests",
+  "homepage": "https://github.com/rstedman/tfs-pullrequest-dashboard",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/rstedman/tfs-pullrequest-dashboard"
+  },
+  "license": "MIT",
   "scripts": {
     "build": "gulp build",
     "watch": "gulp watch",
