--- a/package.json
+++ b/package.json
@@ -44,11 +44,13 @@
     "gulp-rename": "^1.2.2",
     "gulp-run": "^1.7.1",
     "gulp-sourcemaps": "^2.2.0",
+    "gulp-tslint": "^6.1.3",
     "gulp-uglify": "^2.0.0",
     "plugin-typescript": "^5.2.7",
     "run-sequence": "^1.2.2",
     "systemjs-builder": "^0.15.33",
     "tfx-cli": "^0.3.38",
+    "tslint": "^3.15.1",
     "typescript": "^2.1.0-dev.20161030",
     "typings": "^1.5.0"
   }
