--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "run-sequence": "^1.2.2",
     "systemjs-builder": "^0.15.33",
     "tfx-cli": "^0.3.38",
-    "tslint": "^3.15.1",
+    "tslint": "^4.0.0-dev.1",
     "typescript": "^2.1.0-dev.20161030",
     "typings": "^1.5.0"
   }
