--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "gulp-run": "^1.7.1",
     "gulp-sourcemaps": "^2.2.0",
     "gulp-tslint": "^6.1.3",
+    "gulp-typescript": "^3.1.2",
     "gulp-uglify": "^2.0.0",
     "plugin-typescript": "^5.2.7",
     "run-sequence": "^1.2.2",
