--- a/package.json
+++ b/package.json
@@ -48,6 +48,13 @@
     "gulp-tslint": "^6.1.3",
     "gulp-typescript": "^3.1.2",
     "gulp-uglify": "^2.0.0",
+    "jasmine": "^2.5.2",
+    "karma": "^1.3.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-cli": "^1.0.1",
+    "karma-htmlfile-reporter": "^0.3.4",
+    "karma-jasmine": "^1.0.2",
+    "karma-jasmine-html-reporter": "^0.2.2",
     "plugin-typescript": "^5.2.7",
     "run-sequence": "^1.2.2",
     "systemjs-builder": "^0.15.33",
