--- a/package.json
+++ b/package.json
@@ -16,50 +16,50 @@
   },
   "author": "Ryan Stedman",
   "dependencies": {
-    "@angular/common": "~2.1.1",
-    "@angular/compiler": "~2.1.1",
-    "@angular/core": "~2.1.1",
-    "@angular/forms": "~2.1.1",
-    "@angular/http": "~2.1.1",
-    "@angular/platform-browser": "~2.1.1",
-    "@angular/platform-browser-dynamic": "~2.1.1",
-    "@angular/router": "~3.1.1",
-    "@angular/upgrade": "~2.1.1",
-    "angular-2-dropdown-multiselect": "^0.3.0",
-    "es6-shim": "^0.35.1",
-    "reflect-metadata": "^0.1.3",
-    "rxjs": "5.0.0-beta.12",
-    "systemjs": "0.19.40",
-    "typescript": "^2.1.0-dev.20161030",
-    "vss-web-extension-sdk": "^1.106.0",
-    "zone.js": "^0.6.26"
+    "@angular/common": "^4.1.3",
+    "@angular/compiler": "^4.1.3",
+    "@angular/core": "^4.1.3",
+    "@angular/forms": "^4.1.3",
+    "@angular/http": "^4.1.3",
+    "@angular/platform-browser": "^4.1.3",
+    "@angular/platform-browser-dynamic": "^4.1.3",
+    "@angular/router": "^4.1.3",
+    "@angular/upgrade": "^4.1.3",
+    "angular-2-dropdown-multiselect": "^1.3.2",
+    "es6-shim": "^0.35.3",
+    "reflect-metadata": "^0.1.10",
+    "rxjs": "5.4.0",
+    "systemjs": "0.20.13",
+    "typescript": "^2.3.4",
+    "vss-web-extension-sdk": "^2.117.0",
+    "zone.js": "^0.8.12"
   },
   "devDependencies": {
-    "del": "^2.2.1",
+    "del": "^2.2.2",
     "gulp": "^3.9.1",
     "gulp-angular2-embed-templates": "^2.2.1",
-    "gulp-concat": "^2.6.0",
+    "gulp-concat": "^2.6.1",
     "gulp-connect": "^5.0.0",
-    "gulp-html-replace": "^1.6.1",
+    "gulp-html-replace": "^1.6.2",
     "gulp-live-server": "0.0.30",
     "gulp-rename": "^1.2.2",
     "gulp-run": "^1.7.1",
-    "gulp-sourcemaps": "^2.2.0",
-    "gulp-tslint": "^6.1.3",
-    "gulp-typescript": "^3.1.2",
-    "gulp-uglify": "^2.0.0",
-    "jasmine": "^2.5.2",
-    "karma": "^1.3.0",
-    "karma-chrome-launcher": "^2.0.0",
+    "gulp-sourcemaps": "^2.6.0",
+    "gulp-tslint": "^8.1.1",
+    "gulp-typescript": "^3.1.7",
+    "gulp-uglify": "^3.0.0",
+    "jasmine": "^2.6.0",
+    "karma": "^1.7.0",
+    "karma-chrome-launcher": "^2.1.1",
     "karma-cli": "^1.0.1",
-    "karma-htmlfile-reporter": "^0.3.4",
-    "karma-jasmine": "^1.0.2",
+    "karma-htmlfile-reporter": "^0.3.5",
+    "karma-jasmine": "^1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "plugin-typescript": "^5.2.7",
+    "plugin-typescript": "^7.0.6",
     "run-sequence": "^1.2.2",
-    "systemjs-builder": "^0.15.33",
-    "tfx-cli": "^0.3.38",
-    "tslint": "^4.0.0-dev.1",
-    "typings": "^1.5.0"
+    "systemjs-builder": "^0.16.6",
+    "tfx-cli": "^0.4.8",
+    "tslint": "^5.4.3",
+    "typings": "^2.1.1"
   }
 }
