--- a/package.json
+++ b/package.json
@@ -16,50 +16,50 @@
   },
   "author": "Ryan Stedman",
   "dependencies": {
-    "@angular/common": "^4.1.3",
-    "@angular/compiler": "^4.1.3",
-    "@angular/core": "^4.1.3",
-    "@angular/forms": "^4.1.3",
-    "@angular/http": "^4.1.3",
-    "@angular/platform-browser": "^4.1.3",
-    "@angular/platform-browser-dynamic": "^4.1.3",
-    "@angular/router": "^4.1.3",
-    "@angular/upgrade": "^4.1.3",
-    "angular-2-dropdown-multiselect": "^1.3.2",
-    "es6-shim": "^0.35.3",
-    "reflect-metadata": "^0.1.10",
-    "rxjs": "5.4.0",
-    "systemjs": "0.20.13",
-    "typescript": "^2.3.4",
-    "vss-web-extension-sdk": "^2.117.0",
-    "zone.js": "^0.8.12"
+    "@angular/common": "4.3.2",
+    "@angular/compiler": "4.3.2",
+    "@angular/core": "4.3.2",
+    "@angular/forms": "4.3.2",
+    "@angular/http": "4.3.2",
+    "@angular/platform-browser": "4.3.2",
+    "@angular/platform-browser-dynamic": "4.3.2",
+    "@angular/router": "4.3.2",
+    "@angular/upgrade": "4.3.2",
+    "angular-2-dropdown-multiselect": "1.5.3",
+    "es6-shim": "0.35.3",
+    "reflect-metadata": "0.1.10",
+    "rxjs": "5.4.2",
+    "systemjs": "0.20.17",
+    "typescript": "2.4.2",
+    "vss-web-extension-sdk": "2.117.0",
+    "zone.js": "0.8.16"
   },
   "devDependencies": {
-    "del": "^2.2.2",
-    "gulp": "^3.9.1",
-    "gulp-angular2-embed-templates": "^2.2.1",
-    "gulp-concat": "^2.6.1",
-    "gulp-connect": "^5.0.0",
-    "gulp-html-replace": "^1.6.2",
-    "gulp-live-server": "0.0.30",
-    "gulp-rename": "^1.2.2",
-    "gulp-run": "^1.7.1",
-    "gulp-sourcemaps": "^2.6.0",
-    "gulp-tslint": "^8.1.1",
-    "gulp-typescript": "^3.1.7",
-    "gulp-uglify": "^3.0.0",
-    "jasmine": "^2.6.0",
-    "karma": "^1.7.0",
-    "karma-chrome-launcher": "^2.1.1",
-    "karma-cli": "^1.0.1",
-    "karma-htmlfile-reporter": "^0.3.5",
-    "karma-jasmine": "^1.1.0",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "plugin-typescript": "^7.0.6",
-    "run-sequence": "^1.2.2",
-    "systemjs-builder": "^0.16.6",
-    "tfx-cli": "^0.4.8",
-    "tslint": "^5.4.3",
-    "typings": "^2.1.1"
+    "del": "3.0.0",
+    "gulp": "3.9.1",
+    "gulp-angular2-embed-templates": "2.2.1",
+    "gulp-concat": "2.6.1",
+    "gulp-connect": "5.0.0",
+    "gulp-html-replace": "1.6.2",
+    "gulp-live-server": "0.0.31",
+    "gulp-rename": "1.2.2",
+    "gulp-run": "1.7.1",
+    "gulp-sourcemaps": "2.6.0",
+    "gulp-tslint": "8.1.1",
+    "gulp-typescript": "3.2.1",
+    "gulp-uglify": "3.0.0",
+    "jasmine": "2.7.0",
+    "karma": "1.7.0",
+    "karma-chrome-launcher": "2.2.0",
+    "karma-cli": "1.0.1",
+    "karma-htmlfile-reporter": "0.3.5",
+    "karma-jasmine": "1.1.0",
+    "karma-jasmine-html-reporter": "0.2.2",
+    "plugin-typescript": "7.0.6",
+    "run-sequence": "2.1.0",
+    "systemjs-builder": "0.16.9",
+    "tfx-cli": "0.4.9",
+    "tslint": "5.5.0",
+    "typings": "2.1.1"
   }
 }
