--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "gulp-tslint": "8.1.1",
     "gulp-typescript": "3.2.1",
     "gulp-uglify": "3.0.0",
+    "gulp-replace": "0.6.1",
     "jasmine": "2.7.0",
     "karma": "1.7.0",
     "karma-chrome-launcher": "2.2.0",
