--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,18 +1,24 @@
 {
     "manifestVersion": 1,
     "id": "tfs-pullrequest-dashboard",
-    "version": "1.2.0",
+    "version": "2.0.0",
     "name": "Pull Request Dashboard",
     "description": "A pull request dashboard for Visual Studio Team Services/Team Foundation Services.",
     "publisher": "ryanstedman",
     "links": {
-        "repository":{"uri": "https://github.com/rstedman/tfs-pullrequest-dashboard"},
-        "issues":{"uri": "https://github.com/rstedman/tfs-pullrequest-dashboard/issues"}
+        "getstarted": {"uri": "https://github.com/rstedman/tfs-pullrequest-dashboard"},
+        "learn": {"uri": "https://github.com/rstedman/tfs-pullrequest-dashboard"},
+        "license": {"uri": "https://github.com/rstedman/tfs-pullrequest-dashboard/blob/master/LICENSE"},
+        "support": {"uri": "https://github.com/rstedman/tfs-pullrequest-dashboard/issues"}
+    },
+    "repository": {
+        "type": "git",
+        "uri": "https://github.com/rstedman/tfs-pullrequest-dashboard"
     },
     "content": {
         "details":{ "path": "overview.md" }
     },
-    "tags": ["code", "pull request", "git", "code review","open source"],
+    "tags": ["code", "pull request", "git", "code review", "open source"],
     "screenshots": [
         {"path":"assets/screenshots/hub_tab.png"},
         {"path":"assets/screenshots/hub_view.png"},
@@ -42,7 +48,7 @@
                 "ryanstedman.tfs-pullrequest-dashboard.tfs-pullrequest-dashboard-widget.Configuration"
             ],
             "properties": {
-                "name": "Pullrequest Dashboard Widget",
+                "name": "Pull Request Dashboard Widget",
                 "description": "Displays pull requests across all repositories",
                 "previewImageUrl": "assets/images/logo.png",
                 "uri": "index.html",
@@ -69,6 +75,9 @@
     "files": [
         {
             "path": "index.html", "addressable": true
+        },
+        {
+            "path": "configuration.html", "addressable": true
         },
         {
             "path": "app/app.bundle.min.js", "addressable": true
